<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cadastro_de_ve_culos"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tipo"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo" />

        <RadioGroup
            android:id="@+id/groupVeiculos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <RadioButton
                android:id="@+id/radioCarro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/carro" />

            <RadioButton
                android:id="@+id/radioMoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moto" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nome"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/groupVeiculos"
            app:layout_constraintTop_toBottomOf="@+id/groupVeiculos" />

        <EditText
            android:id="@+id/txtNomeVeiculo"
            android:layout_width="389dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/km_atual"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txtNomeVeiculo"
            app:layout_constraintTop_toBottomOf="@+id/txtNomeVeiculo" />

        <EditText
            android:id="@+id/txtKmAtual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txtKmAtual"
            app:layout_constraintTop_toBottomOf="@+id/txtKmAtual" />

        <Spinner
            android:id="@+id/spinCores"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/nomes_cores"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <CheckBox
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/ativo"
            app:layout_constraintStart_toStartOf="@+id/spinCores"
            app:layout_constraintTop_toBottomOf="@+id/spinCores" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>